# g4crysp

./: .gitignore  CMakeLists.txt  GNUmakefile  README.HowToRun  README.HowToRunMT  README.md
.lsp/.cache/: db.transit.json
monolithicCrystal/OpticalPhotons/: CMakeLists.txt  README.md  crystal.cc
monolithicCrystal/SensorHits/: README.md  crystal.cc  run1.mac
monolithicCrystal/crystalGI/: crystal.cc
monolithicCrystal/crystalMT/: CMakeLists.txt  README.md  crystal.cc  init_vis.mac
monolithicCrystal/crystalMT/include/: EventAction.hh  GlobalMessenger.hh  GlobalPars.hh  HistogramManager.hh  Materials.hh  OpticalMaterialsProperties.hh  PrimaryGeneratorAction.hh  PrimaryGeneratorMessenger.hh  SensitiveDetector.h  SensorHit.hh  SensorSD.hh  TrackingAction.hh
monolithicCrystal/crystalMT/nb/: CMakeCache.txt  analysis.ipynb  histograms.txt  histograms_1.txt  histograms_2.txt  images2.npy  images_1.npy  integrated_sensor_data.csv  integrated_sensor_data_1.csv  integrated_sensor_data_2.csv  readme.ipynb  sensor_data_1.csv  sensor_data_2.csv  sensor_positions.csv
monolithicCrystal/crystalMT/nb/.ipynb_checkpoints/: analysis-checkpoint.ipynb  dinamicRangeAndLinearity-checkpoint.ipynb  readme-checkpoint.ipynb
monolithicCrystal/crystalMT/scripts/: images_and_metadata_from_csv.py  init_global.mac  init_global_test.mac  init_global_zR.mac  init_global_zx0.mac  init_vis.mac  run1.mac  run_test.mac  run_test_uniform.mac  run_zreverse.mac  run_zx0.mac
monolithicCrystal/crystalMT/src/: DetectorConstruction.cc  DetectorMessenger.cc  EventAction.cc  GlobalMessenger.cc  HistogramManager.cc  OpticalMaterialsProperties.cc  PrimaryGeneratorAction.cc  PrimaryGeneratorMessenger.cc  SensorHit.cc  SensorSD.cc  TrackingAction.cc
monolithicCrystal/crystalWcTest/: crystal.cc
monolithicCrystal/crystalWithMessenger/: CMakeLists.txt  README.md  init_vis.mac  run1.mac
monolithicCrystal/crystalWithSiPMs/: README.md  crystal.cc
petCsI/toyPet/: CMakeLists.txt  pet.cc
petCsI/toyPet/nb/: gi.py  (+2 more)
(+140 files in other folders)
